--- a/rapi.html
+++ b/rapi.html
@@ -4,7 +4,7 @@
         color: '#a6bbcf',
         defaults: {
             name: {value:""},
-            form: {value:""},
+            form: {type:"remedyForm", value:""},
             query: {value:""},
             fields: {value:""}
         },
@@ -21,7 +21,7 @@
         color: '#a6bbcf',
         defaults: {
             name: {value:""},
-            form: {value:""}
+            form: {type:"remedyForm", value:""},
         },
         inputs:1,
         outputs:1,
@@ -36,7 +36,7 @@
         color: '#a6bbcf',
         defaults: {
             name: {value:""},
-            form: {value:""},
+            form: {type:"remedyForm", value:""},
             id: {value:""}
         },
         inputs:1,
@@ -52,7 +52,7 @@
         color: '#a6bbcf',
         defaults: {
             name: {value:""},
-            form: {value:""},
+            form: {type:"remedyForm", value:""},
             query: {value:""}
         },
         inputs:1,
@@ -62,6 +62,42 @@
             return this.name || "rapi-delete";
         }
     });
+
+
+    RED.nodes.registerType('remedyForm',{
+        category: 'config',
+        defaults: {
+            //name: {value:""},
+            remedyForm: {value:"",required:true}
+        },
+        label: function() {
+            return this.remedyForm;
+        },
+        oneditprepare: function() {
+            var previous = null;
+
+            try {
+                $("#node-config-input-remedyForm").autocomplete( "destroy" );
+            } catch(err) {
+            }
+            $("#node-config-lookup-remedyForm").click(function() {
+                $("#node-config-lookup-remedyForm").addClass('disabled');
+                $.getJSON('forms',function(data) {
+                    $("#node-config-lookup-remedyForm").removeClass('disabled');
+                    $("#node-config-input-remedyForm").autocomplete({
+                        source:data,
+                        minLength:0,
+                        close: function( event, ui ) {
+                            $("#node-config-input-remedyForm").autocomplete( "destroy" );
+                        }
+                    }).autocomplete("search","");
+                });
+            });
+        },
+        oneditsave: function() {
+        }
+    });
+
 </script>
 
 <script type="text/html" data-template-name="rapi-search">
@@ -119,6 +155,9 @@
 
 <script type="text/html" data-help-name="rapi-delete">
     <p>A simple node that execute a delete query against remedy</p>
+    <p>Values can be provided in the fields above or as:</p>
+    <li>msg.form</li>
+    <li>msg.query</li>
 </script>
 
 <script type="text/html" data-template-name= "rapi-update">
@@ -138,4 +177,12 @@
 
 <script type="text/html" data-help-name="rapi-update">
     <p>A simple node that execute an update of a record against remedy</p>
+</script>
+
+<script type="text/html" data-template-name="remedyForm">
+    <div class="form-row">
+        <label for="node-config-input-remedyForm"><i class="fa fa-random"></i> <span data-i18n="serial.label.serialport"></span></label>
+        <input type="text" id="node-config-input-remedyForm" style="width:60%;" data-i18n="[placeholder]serial.placeholder.serialport">
+        <a id="node-config-lookup-remedyForm" class="btn"><i id="node-config-lookup-remedyForm-icon" class="fa fa-search"></i></a>
+    </div>
 </script>
