Make form optional

--- a/rapi.html
+++ b/rapi.html
@@ -5,7 +5,7 @@
         defaults: {
             name: {value: ""},
             server: {type: "remedyServer", value: ""},
-            form: {type: "remedyForm", value: ""},
+            form: {type: "remedyForm", value: "", required: false},
             query: {value: ""},
             fields: {value: ""},
             bypassCache: {value: false}
@@ -24,7 +24,7 @@
         defaults: {
             name: {value: ""},
             server: {type: "remedyServer", value: ""},
-            form: {type: "remedyForm", value: ""},
+            form: {type: "remedyForm", value: "", required: false},
         },
         inputs: 1,
         outputs: 1,
@@ -40,7 +40,7 @@
         defaults: {
             name: {value: ""},
             server: {type: "remedyServer", value: ""},
-            form: {type: "remedyForm", value: ""},
+            form: {type: "remedyForm", value: "", required: false},
             requestId: {value: ""},
             enableMerge: {value: ""},
             mergeHandleDuplicates: {value: 1},
@@ -110,7 +110,7 @@
         defaults: {
             name: {value: ""},
             server: {type: "remedyServer", value: ""},
-            form: {type: "remedyForm", value: ""},
+            form: {type: "remedyForm", value: "", required: false},
             query: {value: ""}
         },
         inputs: 1,
