--- a/rapi.html
+++ b/rapi.html
@@ -42,6 +42,8 @@
             server: {type: "remedyServer", value: ""},
             form: {type: "remedyForm", value: "", required: false},
             requestId: {value: ""},
+            query: {value: ""},
+            multiMatchOption: {value: 2},
             enableMerge: {value: ""},
             mergeHandleDuplicates: {value: 1},
             mergeSkipRequired: {value: ""},
@@ -56,6 +58,20 @@
             return this.name || "rapi-update";
         },
         oneditprepare: function () {
+            $("#node-input-multiMatchOption").typedInput({
+                types: [
+                    {
+                        value: "multiMatchOption",
+                        options: [
+                            { value: "0", label: "Throw Error"},
+                            { value: "1", label: "Update first"},
+                            { value: "2", label: "Update all"},
+                        ]
+                    }
+                ]
+            })
+
+            $('#node-input-multiMatchOption').val(this.multiMatchOption);
 
             $("#node-input-mergeHandleDuplicates").typedInput({
                 types: [
@@ -277,6 +293,14 @@
     <div class="form-row">
         <label for="node-input-requestId"><i class="fa fa-tag"></i> Request Id</label>
         <input type="text" id="node-input-requestId">
+    </div>
+    <div class="form-row">
+        <label for="node-input-query"><i class="fa fa-tag"></i> Query</label>
+        <input type="text" id="node-input-query">
+    </div>
+    <div class="form-row">
+        <label for="node-input-multiMatchOption"><i class="fa fa-tag"></i> Multiple Matches</label>
+        <input type="text" id="node-input-multiMatchOption">
     </div>
     <div class="form-row" id="node-input-merge-enable">
         <label> Use Merge</label>
